# crewai-on-vertexai

./: .gitignore  README.md  crew_ai_app.py  demo_re.ipynb  pyproject.toml  report.md
src/crewai_gcp/: crew.py  main.py
src/crewai_gcp/config/: agents.yaml
